--- a/h5rdmtoolbox/data/tutorial_standard_name_table_reduced.yaml
+++ b/h5rdmtoolbox/data/tutorial_standard_name_table_reduced.yaml
@@ -5,72 +5,73 @@ contact: 'https://orcid.org/0000-0001-8729-0482'
 valid_characters: '[^a-zA-Z0-9_]'
 pattern: '^[0-9 ].*'
 last_modified: 2023-08-16_11:05:00
-standard_devices:
-  description: Devices are suffixes to the standard_name, e.g. pressure_difference_across_fan
-  fan:
-    description: The test fan
-    coordinates:
-      units: mm
-      x:
-        - -11.5
+affixes:
+  device:
+    description: Devices are suffixes to the standard_name, e.g. pressure_difference_across_fan
+    fan:
+      description: The test fan
+      coordinates:
+        units: mm
+        x:
+          - -11.5
+          - 0
+          - 0
+        y:
+          - 0
+          - 100.4
+          - 0
+    orifice: The orifice to measure the volume flow rate
+  location:
+    description: Locations are suffixes to the standard_name, e.g. velocity_at_fan_inlet
+    fan_inlet: The defined inlet into the test fan. See additional meta data or references or the exact spatial location.
+    fan_outlet: The defined outlet of the test fan. See additional meta data or references or the exact spatial location.
+  reference_frame:
+    description: Reference frames are suffixes to the standard_name, e.g. velocity_in_rotating_frame
+    rotating_frame:
+      orientation:
+        x:
+          - 1
+          - 0
+          - 0
+        y: y
+        z:
+          - 1
+          - 0
+          - 0
+      origin:
         - 0
         - 0
-      y:
         - 0
-        - 100.4
+      principle_axis:
         - 0
-  orifice: The orifice to measure the volume flow rate
-standard_locations:
-  description: Locations are suffixes to the standard_name, e.g. velocity_at_fan_inlet
-  fan_inlet: The defined inlet into the test fan. See additional meta data or references or the exact spatial location.
-  fan_outlet: The defined outlet of the test fan. See additional meta data or references or the exact spatial location.
-standard_reference_frames:
-  description: Reference frames are suffixes to the standard_name, e.g. velocity_in_rotating_frame
-  rotating_frame:
-    orientation:
-      x:
+        - 0
         - 1
+      type: rotating
+    stationary_frame:
+      orientation:
+        x:
+          - 1
+          - 0
+          - 0
+        y:
+          - 1
+          - 0
+          - 0
+        z:
+          - 1
+          - 0
+          - 0
+      origin:
         - 0
         - 0
-      y: y
-      z:
-        - 1
         - 0
-        - 0
-    origin:
-      - 0
-      - 0
-      - 0
-    principle_axis:
-      - 0
-      - 0
-      - 1
-    type: rotating
-  stationary_frame:
-    orientation:
-      x:
-        - 1
-        - 0
-        - 0
-      y:
-        - 1
-        - 0
-        - 0
-      z:
-        - 1
-        - 0
-        - 0
-    origin:
-      - 0
-      - 0
-      - 0
-    principle_axis:
-    type: stationary
-standard_components: # The direction of the spatial component of a vector
-  description: Components are prefixes to the standard_name, e.g. x_velocity
-  x: X indicates the x-axis component of the vector.
-  y: Y indicates the y-axis component of the vector.
-  z: Z indicates the z-axis component of the vector.
+      principle_axis:
+      type: stationary
+  component: # The direction of the spatial component of a vector
+    description: Components are prefixes to the standard_name, e.g. x_velocity
+    x: X indicates the x-axis component of the vector.
+    y: Y indicates the y-axis component of the vector.
+    z: Z indicates the z-axis component of the vector.
 standard_names:
   time:
     canonical_units: s
