--- a/tests/data/sntable_with_split.yml
+++ b/tests/data/sntable_with_split.yml
@@ -5,13 +5,10 @@ contact: https://orcid.org/0000-0001-8729-0482
 valid_characters: ''
 pattern: ''
 ---
-table:
+standard_names:
     synthetic_particle_image:
         canonical_units: counts
         description: Synthetic particle image velocimetry image containing image particles of a single synthetic recording.
     mean_particle_diameter:
         canonical_units: pixel
         description: The mean particle diameter of an image particle. The diameter is defined as the 2 sigma with of the gaussian intensity profile of the particle image.
----
-alias:
-    particle_image: synthetic_particle_image
