--- a/h5rdmtoolbox/data/tutorial_standard_name_table.yaml
+++ b/h5rdmtoolbox/data/tutorial_standard_name_table.yaml
@@ -1,5 +1,5 @@
 name: Test
-version: v1.0
+version: v1.1
 institution: my_institution
 contact: 'https://orcid.org/0000-0001-8729-0482'
 valid_characters: '[^a-zA-Z0-9_]'
@@ -75,11 +75,11 @@ affixes:
 standard_names:
   time:
     canonical_units: s
-    description: Physical time
+    description: Time refers tothe relative time since start of data aquisition.
   coordinate:
     vector: true
     canonical_units: m
-    description: Spatial coordinate. Coordinate is a vector quantity.
+    description: Coordinate refers to the spatial coordinate. Coordinate is a vector quantity.
   velocity:
     vector: true
     canonical_units: m/s
