--- a/h5rdmtoolbox/data/tutorial_convention.yaml
+++ b/h5rdmtoolbox/data/tutorial_convention.yaml
@@ -1,7 +1,15 @@
-__name__: planar-piv-convention
+__name__: h5rdmtoolbox-tuturial-convention
 __institution__: https://orcid.org/members/001G000001e5aUTIAY
 __contact__: https://orcid.org/0000-0001-8729-0482
 __use_scale_offset__: True
+
+data_type:
+  description: 'Type of data in file. Can be numerical or experimental'
+  target_methods: __init__
+  validator:
+    $in:
+      - experimental
+      - numerical
 
 
 standard_name:
