doc update and version update [no-ci]

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = h5rdmtoolbox
-version = 0.8.0a0
+version = 0.8rc1
 author = Matthias Probst
 author_email = matthias.probst@kit.edu
 description = Research Data Management Toolbox to streamline and enhance work with HDF5 respecting the FAIR principles.
@@ -13,7 +13,7 @@ classifiers =
     Programming Language :: Python :: 3.10
     License :: OSI Approved :: GNU General Public License v3 (GPLv3)
     Operating System :: OS Independent
-    Development Status :: 4 - Alpha
+    Development Status :: 4 - Beta
 
 [options]
 packages = find:
