--- a/setup.cfg
+++ b/setup.cfg
@@ -25,7 +25,7 @@ install_requires =
     h5py>=3.7.0
     matplotlib>=3.5.2
     pandas>=1.4.3
-    IPython>=8.4.0
+    IPython>=8.4.0  # colab wants 7.34.0
     pyyaml
     xarray>=2022.3.0
     pint==0.21.1
