--- a/docs/conventions/example_convention.yaml
+++ b/docs/conventions/example_convention.yaml
@@ -1,11 +1,10 @@
 __name__: h5rdmtoolbox-tuturial-convention
 __institution__: https://orcid.org/members/001G000001e5aUTIAY
 __contact__: https://orcid.org/0000-0001-8729-0482
-__use_scale_offset__: False
 
 data_type:
   description: 'Type of data in file. Can be numerical or experimental'
-  target_methods: __init__
+  target_method: __init__
   validator:
     $in:
     - experimental
