--- a/h5rdmtoolbox/data/tutorial_standard_name_table.yaml
+++ b/h5rdmtoolbox/data/tutorial_standard_name_table.yaml
@@ -75,7 +75,7 @@ affixes:
 standard_names:
   time:
     units: s
-    description: Time refers to the relative time since start of data aquisition.
+    description: Time refers to the relative time since start of data acquisition.
   coordinate:
     vector: true
     units: m
