--- a/setup.cfg
+++ b/setup.cfg
@@ -34,7 +34,7 @@ install_requires =
     packaging
     python-forge==18.6.0
     requests
-    zenodo_search @ git+https://github.com/matthiasprobst/zenodo_search@v0.1.0a4
+    zenodo_search==0.1.0
 
 [options.extras_require]
 mongodb =
