--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,7 @@ regex>=2020.7.9
 packaging
 python-forge==18.6.0
 requests
-zenodo_search@ git+https://github.com/matthiasprobst/zenodo_search@v0.1.0a4
+zenodo_search==0.1.0
 # mongodb:
 pymongo>=4.2.0
 # io
