--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = h5rdmtoolbox
-version = 0.8.0
+version = 0.8.1
 author = Matthias Probst
 author_email = matthias.probst@kit.edu
 description = Research Data Management Toolbox to streamline and enhance work with HDF5 respecting the FAIR principles.
@@ -14,42 +14,42 @@ classifiers =
     License :: OSI Approved :: GNU General Public License v3 (GPLv3)
     Operating System :: OS Independent
     Development Status :: 4 - Beta
+    Topic :: Scientific/Engineering
 
 [options]
 packages = find:
 python_requires = >=3.8, <3.11
 include_package_data = True
 install_requires =
-    appdirs>=1.4.4
-    numpy>=1.20,<1.23.0
-    h5py>=3.7.0
-    matplotlib>=3.5.2
-    IPython>=8.4.0  # colab wants 7.34.0
+    appdirs >= 1.4.4
+    numpy >= 1.20, <1.23.0
+    h5py >= 3.7.0
+    matplotlib >= 3.5.2
+    IPython >= 8.4.0  # colab wants 7.34.0
     pyyaml
-    xarray>=2022.3.0
-    pint==0.21.1
-;    pint>=0.19.2<0.22.0 Note: 0.22.0 shows bad str-output for quantities with format Lx~
-    pint_xarray>=0.2.1
-    regex>=2020.7.9
+    xarray >= 2022.3.0
+    pint == 0.21.1  # pint >= 0.19.2<0.22.0 Note: 0.22.0 shows bad str-output for quantities with format Lx~
+    pint_xarray >= 0.2.1
+    regex >= 2020.7.9
     packaging
-    python-forge==18.6.0
+    python-forge == 18.6.0
     requests
-    zenodo_search==0.1.0
+    zenodo_search == 0.1.0
 
 [options.extras_require]
 mongodb =
-    pymongo>=4.2.0
+    pymongo >= 4.2.0
 io =
-    pco_tools>=1.0.0
-    opencv-python>=4.5.3.56
-    pandas>=1.4.3
+    pco_tools >= 1.0.0
+    opencv-python >= 4.5.3.56
+    pandas >= 1.4.3
 snt =
     xmltodict
-    tabulate>=0.8.10
+    tabulate >= 0.8.10
     python-gitlab
-    pypandoc>=1.11
+    pypandoc >= 1.11
 test =
-    pytest>=7.1.2
+    pytest >= 7.1.2
     pytest-cov
     pylint
     %(io)s
@@ -61,8 +61,8 @@ docs =
     %(mongodb)s
     %(test)s
     jupyterlab
-    Sphinx>=3,<5
-    sphinx_book_theme==0.3.3
+    Sphinx >= 3,<5
+    sphinx_book_theme == 0.3.3
     sphinx-copybutton
     scikit-image
     scikit-learn
