--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@ name = h5rdmtoolbox
 version = 0.8.3
 author = Matthias Probst
 author_email = matthias.probst@kit.edu
-description = Research Data Management Toolbox to streamline and enhance work with HDF5 respecting the FAIR principles.
+description = Supporting a FAIR Research Data lifecycle using Python and HDF5.
 long_description = file: README.md
 long_description_content_type = text/markdown
 url = https://h5rdmtoolbox.readthedocs.io/en/latest/
