h5tbx convention now registered

--- a/h5rdmtoolbox/data/h5tbx.yaml
+++ b/h5rdmtoolbox/data/h5tbx.yaml
@@ -10,7 +10,7 @@ units:
 
 scale:
   target_method: create_dataset
-  validator: $pintquantity
+  validator: $quantity
   description: Scale factor for the dataset values.
   default_value: $NONE
 
