--- a/tests/conventions/test_convention.yaml
+++ b/tests/conventions/test_convention.yaml
@@ -1,33 +1,86 @@
-__name__: h5tbx
+__name__: h5rdmtoolbox-tutorial-convention
 __institution__: https://orcid.org/members/001G000001e5aUTIAY
 __contact__: https://orcid.org/0000-0001-8729-0482
-__decoders__: 'scale_and_offset'
+__decoders__: scale_and_offset
 
-scale:
-  target_method: create_dataset
-  validator: $quantity
-  description: Scale factor for the dataset values.
-  default_value: $NONE
 
-offset:
-  target_method: create_dataset
-  validator: $offset
-  description: The offset of the dataset.
-  default_value: $NONE
+$datatypes:
+  - experimental
+  - numerical
+  - analytical
+
+
+data_type:
+  description: Type of data in file. Can be numerical, analytical or experimental.
+  target_method: __init__
+  validator: $datatypes
+  default_value: $EMPTY
 
 units:
   target_method: create_dataset
   validator: $units
   description: The physical unit of the dataset. If dimensionless, the unit is ''.
 
-symbol:
+standard_name:
   target_method: create_dataset
-  validator: $str
-  description: The mathematical symbol of the dataset.
-  default_value: $NONE
+  validator: $standard_name
+  requirements: units
+  description: Standard name of the dataset. If not set, the long_name attribute must be given.
+  alternative_standard_attribute: long_name
+
+standard_name_table:
+  target_method: __init__
+  validator: $standard_name_table
+  default_value: https://zenodo.org/record/8276716
+  requirements:
+    - standard_name
+    - units
+  description: The standard name table of the convention.
 
 long_name:
   target_method: create_dataset
-  validator: $regex(^[a-zA-Z].{5,}$)
-  description: A very long name.
+  validator: $regex(^[a-zA-Z].*(?<!\s)$)
+  alternative_standard_attribute: standard_name
+  description: An comprehensive description of the dataset. If not set, the standard_name attribute must be given.
+
+comment_file:
+  target_method: __init__
+  validator: $regex(^[A-Z].*[a-zA-Z.]$)
   default_value: $NONE
+  description: Comment describes the file content in more detail.
+
+comment_group:
+  target_method: create_group
+  validator: $regex(^[A-Z].*[a-zA-Z.]$)
+  default_value: $NONE
+  description: Comment describes the group content in more detail.
+
+comment_dataset:
+  target_method: create_dataset
+  validator: $regex(^[A-Z].*[a-zA-Z.]$)
+  default_value: $NONE
+  description: Comment describes the dataset in more detail.
+
+contact:
+  validator: $orcid
+  description: Contact or responsible person for the full file. Contact is represented by an ORCID.
+  default_value: $EMPTY
+  target_method: __init__
+
+#references_file:
+#  validator: $url
+#  target_method: __init__
+#  default_value: $NONE
+#  description: Web resources serving as references for the full file.
+#
+#references_group:
+#  validator: $url
+#  target_method: create_group
+#  default_value: $NONE
+#  description: Web resources serving as references for the group.
+#
+#referencesdataset:
+#  validator: $url
+#  target_method: create_dataset
+#  default_value: $NONE
+#  description: Web resources serving as references for the dataset.
