--- a/tests/conventions/test_convention.yaml
+++ b/tests/conventions/test_convention.yaml
@@ -9,7 +9,6 @@ $datatypes:
   - numerical
   - analytical
 
-
 data_type:
   description: Type of data in file. Can be numerical, analytical or experimental.
   target_method: __init__
@@ -43,19 +42,19 @@ long_name:
   alternative_standard_attribute: standard_name
   description: An comprehensive description of the dataset. If not set, the standard_name attribute must be given.
 
-comment_file:
+comment-file:
   target_method: __init__
   validator: $regex(^[A-Z].*[a-zA-Z.]$)
   default_value: $NONE
   description: Comment describes the file content in more detail.
 
-comment_group:
+comment-group:
   target_method: create_group
   validator: $regex(^[A-Z].*[a-zA-Z.]$)
   default_value: $NONE
   description: Comment describes the group content in more detail.
 
-comment_dataset:
+comment-dataset:
   target_method: create_dataset
   validator: $regex(^[A-Z].*[a-zA-Z.]$)
   default_value: $NONE
@@ -67,19 +66,19 @@ contact:
   default_value: $EMPTY
   target_method: __init__
 
-#references_file:
+#references-file:
 #  validator: $url
 #  target_method: __init__
 #  default_value: $NONE
 #  description: Web resources serving as references for the full file.
 #
-#references_group:
+#references-group:
 #  validator: $url
 #  target_method: create_group
 #  default_value: $NONE
 #  description: Web resources serving as references for the group.
 #
-#referencesdataset:
+#references-dataset:
 #  validator: $url
 #  target_method: create_dataset
 #  default_value: $NONE
