--- a/h5rdmtoolbox/data/tutorial_convention.yaml
+++ b/h5rdmtoolbox/data/tutorial_convention.yaml
@@ -3,27 +3,16 @@ __institution__: https://orcid.org/members/001G000001e5aUTIAY
 __contact__: https://orcid.org/0000-0001-8729-0482
 __decoders__: scale_and_offset
 
+$datatypes:
+  - experimental
+  - numerical
+  - analytical
+
 data_type:
   description: Type of data in file. Can be numerical, analytical or experimental.
   target_method: __init__
-  validator:
-    $in:
-      - experimental
-      - numerical
-      - analytical
+  validator: $datatypes
   default_value: $EMPTY
-
-scale:
-  target_method: create_dataset
-  validator: $quantity
-  description: Scale factor for the dataset values.
-  default_value: $NONE
-
-offset:
-  target_method: create_dataset
-  validator: $offset
-  description: The offset of the dataset.
-  default_value: $NONE
 
 units:
   target_method: create_dataset
@@ -48,35 +37,32 @@ standard_name_table:
 
 long_name:
   target_method: create_dataset
-  validator:
-    $regex: ^[a-zA-Z].*(?<!\s)$
+  validator: $regex(^[a-zA-Z].*(?<!\s)$)
   alternative_standard_attribute: standard_name
   description: An comprehensive description of the dataset. If not set, the standard_name attribute must be given.
 
 comment-file:
   target_method: __init__
-  validator:
-    $regex: ^[A-Z].*[a-zA-Z.]$
+  validator: $regex(^[A-Z].*[a-zA-Z.]$)
   default_value: $NONE
   description: Comment describes the file content in more detail.
 
 comment-group:
   target_method: create_group
-  validator:
-    $regex: ^[A-Z].*[a-zA-Z.]$
+  validator: $regex(^[A-Z].*[a-zA-Z.]$)
   default_value: $NONE
   description: Comment describes the group content in more detail.
 
 comment-dataset:
   target_method: create_dataset
-  validator:
-    $regex: ^[A-Z].*[a-zA-Z.]$
+  validator: $regex(^[A-Z].*[a-zA-Z.]$)
   default_value: $NONE
   description: Comment describes the dataset in more detail.
 
-contact-file:
+contact:
   validator: $orcid
   description: Contact or responsible person for the full file. Contact is represented by an ORCID.
+  default_value: $EMPTY
   target_method: __init__
 
 references-file:
