--- a/setup.cfg
+++ b/setup.cfg
@@ -35,6 +35,7 @@ install_requires =
     python-forge == 18.6.0
     requests
     zenodo_search == 0.1.0
+    pydantic >= 2.3.0
 
 [options.extras_require]
 mongodb =
