--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = h5rdmtoolbox
-version = 0.9.0a0
+version = 0.9.0
 author = Matthias Probst
 author_email = matthias.probst@kit.edu
 description = Supporting a FAIR Research Data lifecycle using Python and HDF5.
@@ -13,7 +13,7 @@ classifiers =
     Programming Language :: Python :: 3.10
     License :: OSI Approved :: GNU General Public License v3 (GPLv3)
     Operating System :: OS Independent
-    Development Status :: 4 - Alpha
+    Development Status :: 4 - Beta
     Topic :: Scientific/Engineering
 
 [options]
