--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = h5rdmtoolbox
-version = 0.9.1
+version = 0.10.0
 author = Matthias Probst
 author_email = matthias.probst@kit.edu
 description = Supporting a FAIR Research Data lifecycle using Python and HDF5.
@@ -11,7 +11,7 @@ classifiers =
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
     Programming Language :: Python :: 3.10
-    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
+    License :: OSI Approved :: MIT License
     Operating System :: OS Independent
     Development Status :: 4 - Beta
     Topic :: Scientific/Engineering
