loosen the version restrictions

--- a/setup.cfg
+++ b/setup.cfg
@@ -18,37 +18,38 @@ classifiers =
 
 [options]
 packages = find:
-python_requires = >=3.8, <3.11
+python_requires = >=3.8, <=3.12
 include_package_data = True
 install_requires =
     appdirs >= 1.4.4
-    numpy >= 1.20, <1.23.0
+    importlib_resources
+    numpy #>= 1.20, <1.23.0
     h5py > 3.7.0
     matplotlib >= 3.5.2
     IPython >= 7.34.0  # colab wants 7.34.0
-    pyyaml
+    pyyaml < 5.4.0  # 5.4 does not work with python 3.11!
     xarray >= 2022.3.0
     pint == 0.21.1  # pint >= 0.19.2<0.22.0 Note: 0.22.0 shows bad str-output for quantities with format Lx~
-    pint_xarray >= 0.2.1
-    regex >= 2020.7.9
+    pint_xarray # >= 0.2.1
+    regex # >= 2023
     packaging
-    python-forge == 18.6.0
+    python-forge # == 18.6.0
     requests
     zenodo_search == 0.2.1
     pydantic >= 2.3.0
 
 [options.extras_require]
 mongodb =
-    pymongo >= 4.2.0
+    pymongo # >= 4.2.0
 io =
     pco_tools >= 1.0.0
-    opencv-python >= 4.5.3.56
-    pandas >= 1.4.3
+    opencv-python # >= 4.5.3.56
+    pandas # >= 1.4.3
 snt =
     xmltodict
-    tabulate >= 0.8.10
+    tabulate # >= 0.8.10
     python-gitlab
-    pypandoc >= 1.11
+    pypandoc # >= 1.11
 test =
     pytest >= 7.1.2
     pytest-cov
@@ -77,10 +78,6 @@ docs =
 complete =
     %(test)s
     %(docs)s
-
-[options.entry_points]
-console_scripts =
-    h5tbx = h5rdmtoolbox._cli:main
 
 [options.package_data]
 h5rdmtoolbox =
