--- a/setup.cfg
+++ b/setup.cfg
@@ -23,11 +23,11 @@ include_package_data = True
 install_requires =
     appdirs >= 1.4.4
     importlib_resources
-    numpy #>= 1.20, <1.23.0
+    numpy >= 1.20
     h5py > 3.7.0
     matplotlib >= 3.5.2
     IPython >= 7.34.0  # colab wants 7.34.0
-    pyyaml < 5.4.0  # 5.4 does not work with python 3.11!
+    pyyaml > 6.0  # 5.4 does not work with python 3.11!
     xarray >= 2022.3.0
     pint == 0.21.1  # pint >= 0.19.2<0.22.0 Note: 0.22.0 shows bad str-output for quantities with format Lx~
     pint_xarray # >= 0.2.1
