--- a/docs/conventions/example_convention.yaml
+++ b/docs/conventions/example_convention.yaml
@@ -2,6 +2,12 @@ __name__: h5rdmtoolbox-tuturial-convention
 __institution__: https://orcid.org/members/001G000001e5aUTIAY
 __contact__: https://orcid.org/0000-0001-8729-0482
 
+units:
+  target_method: create_dataset
+  validator: $units
+  description: The physical unit of the dataset. If dimensionless, the unit is ''.
+  default_value: $EMPTY
+  
 contact_id:
   description: ID of a person to contact for questions.
   target_method: __init__
@@ -14,11 +20,17 @@ comment:
   validator: $regex(^[A-Z].*)
   default_value: $NONE
 
-$dataSourceTypes:
-  - numerical
-  - experimental
+comment-grp:
+  description: Comment to a dataset
+  target_method: create_group
+  validator: $regex(^[A-Z].*)
+  default_value: $NONE
 
 data_type:
   description: 'Type of data in file. Can be numerical or experimental'
   target_method: __init__
   validator: $dataSourceTypes
+
+$dataSourceTypes:
+  - numerical
+  - experimental
