--- a/setup.cfg
+++ b/setup.cfg
@@ -11,6 +11,8 @@ classifiers =
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
     Programming Language :: Python :: 3.10
+    Programming Language :: Python :: 3.11
+    Programming Language :: Python :: 3.12
     License :: OSI Approved :: MIT License
     Operating System :: OS Independent
     Development Status :: 4 - Beta
@@ -18,7 +20,7 @@ classifiers =
 
 [options]
 packages = find:
-python_requires = >=3.8, <=3.12
+python_requires = >=3.8, <3.13
 include_package_data = True
 install_requires =
     appdirs >= 1.4.4
