--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -14,12 +14,9 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-#        os: [ ubuntu-latest, macos-latest, windows-latest ]
-        os: [ windows-latest ]
-        python-version: [ '3.8', ]
-        mongodb-version: ['5.0', ]
-#        python-version: [ '3.8', '3.9' , '3.10', '3.11', '3.12']
-#        mongodb-version: ['5.0', '6.0']
+        os: [ ubuntu-latest, macos-latest, windows-latest ]
+        python-version: [ '3.8', '3.9' , '3.10', '3.11', '3.12']
+        mongodb-version: ['5.0', '6.0']
 
     steps:
       - name: Checkout repo
