--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -10,6 +10,18 @@ on:
       - dev-repository
 
 jobs:
+  cleanup:
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ ubuntu-latest, macos-latest, windows-latest ]
+        python-version: [ '3.8', ]
+
+    - name: Cleanup test repository data
+      env:
+        ZENODO_SANDBOX_API_TOKEN: ${{ secrets.ZENODO_SANDBOX_API_TOKEN }}
+      run: python tests/cleanup.py
+
   test:
     runs-on: ${{ matrix.os }}
     strategy:
@@ -59,11 +71,6 @@ jobs:
         env:
           ZENODO_SANDBOX_API_TOKEN: ${{ secrets.ZENODO_SANDBOX_API_TOKEN }}
         run: pytest --cov --cov-report=xml
-
-      - name: Cleanup test repository data
-        env:
-          ZENODO_SANDBOX_API_TOKEN: ${{ secrets.ZENODO_SANDBOX_API_TOKEN }}
-        run: python tests/cleanup.py
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v3
