major reorganization, bugfixes and clenups

--- a/setup.cfg
+++ b/setup.cfg
@@ -40,11 +40,9 @@ install_requires =
     pydantic >= 2.3.0
 
 [options.extras_require]
-mongodb =
+database=
     pymongo # >= 4.2.0
-io =
-    pco_tools >= 1.0.0
-    opencv-python # >= 4.5.3.56
+csv =
     pandas # >= 1.4.3
 snt =
     xmltodict
@@ -61,9 +59,9 @@ test =
     %(snt)s
     %(mongodb)s
 docs =
-    %(io)s
+    %(csv)s
     %(snt)s
-    %(mongodb)s
+    %(database)s
     %(test)s
     jupyterlab
     Sphinx >= 3,<5
