--- a/setup.cfg
+++ b/setup.cfg
@@ -57,7 +57,7 @@ test =
     scipy  # provides netcdf4
     %(csv)s
     %(snt)s
-    %(mongodb)s
+    %(database)s
 docs =
     %(csv)s
     %(snt)s
