--- a/h5rdmtoolbox/data/piv-v1.yml
+++ b/h5rdmtoolbox/data/piv-v1.yml
@@ -1,5 +1,5 @@
 name: piv
-version_number: 1
+version: 1.0.0
 institution: ITS, KIT
 contact: 'https://orcid.org/0000-0001-8729-0482'
 valid_characters: ''
