WIP proper usage of m4i

--- a/setup.cfg
+++ b/setup.cfg
@@ -40,6 +40,8 @@ install_requires =
     pydantic >= 2.3.0
 
 [options.extras_require]
+iri =
+    rdflib
 database=
     pymongo # >= 4.2.0
 csv =
@@ -55,6 +57,7 @@ test =
     pylint
     xmltodict
     scipy  # provides netcdf4
+    %(iri)s
     %(csv)s
     %(snt)s
     %(database)s
