--- a/setup.cfg
+++ b/setup.cfg
@@ -35,7 +35,7 @@ install_requires =
     pint_xarray # >= 0.2.1
     regex # >= 2023
     packaging
-    namespacelib >= 0.1.0  # has the ontology /vocabulary namespaces like M4I, PIVMETA, etc. similar to rdflib, which has PROV, FOAF, ...
+    ontolutils == 0.2.0a7
     python-forge # == 18.6.0
     requests
     pydantic >= 2.3.0
