--- a/requirements.txt
+++ b/requirements.txt
@@ -25,4 +25,4 @@ pypandoc>=1.11
 pydantic >= 2.3.0
 # other:
 tqdm>=4.64.0
-ontolutils == 0.1.0a7
+ontolutils @ git+https://github.com/matthiasprobst/ontology-utils
