update version string and add token to gh action

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -57,6 +57,7 @@ jobs:
       - name: Run pytest coverage
         env:
           ZENODO_SANDBOX_API_TOKEN: ${{ secrets.ZENODO_SANDBOX_API_TOKEN }}
+          ZENODO_API_TOKEN: ${{ secrets.ZENODO_API_TOKEN }}
         run: pytest --cov --cov-report=xml
 
       - name: Upload coverage to Codecov
