simplification: one logger for all

--- a/setup.cfg
+++ b/setup.cfg
@@ -35,7 +35,7 @@ install_requires =
     pint_xarray # >= 0.2.1
     regex # >= 2023
     packaging
-    ontolutils @ git+https://github.com/matthiasprobst/ontology-utils
+    ontolutils
     python-forge # == 18.6.0
     requests
     pydantic >= 2.3.0
