--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,6 @@ regex>=2020.7.9
 packaging
 python-forge==18.6.0
 requests
-zenodo_search==0.2.1
 rdflib
 # database:
 pymongo>=4.2.0
@@ -25,4 +24,4 @@ pypandoc>=1.11
 pydantic >= 2.3.0
 # other:
 tqdm>=4.64.0
-ontolutils @ git+https://github.com/matthiasprobst/ontology-utils
+ontolutils
