RDF consts are moved to rdf module

--- a/.gitignore
+++ b/.gitignore
@@ -53,6 +53,7 @@ coverage.svg
 docs/colab/my_file.hdf
 *.h5
 *.nxs
+*.json
 *.jsonld
 docs/userguide/wrapper/test.hdf
 docs/userguide/wrapper/test.json
