add hdf5 fairfy gui

--- a/setup.cfg
+++ b/setup.cfg
@@ -51,6 +51,8 @@ snt =
     tabulate # >= 0.8.10
     python-gitlab
     pypandoc # >= 1.11
+gui =
+    PyQt5
 test =
     pytest >= 7.1.2
     pytest-cov
@@ -77,6 +79,7 @@ docs =
     myst-nb
     sphinxcontrib-bibtex
 complete =
+    %(gui)s
     %(test)s
     %(docs)s
 
@@ -115,3 +118,7 @@ exclude_lines =
     def _group_repr_html
     def _html_repr_dataset
     def h5file_html_repr
+
+[options.entry_points]
+console_scripts =
+    h5tbx = h5rdmtoolbox.cli:main
