bugfix layout validation and improved summary

--- a/setup.cfg
+++ b/setup.cfg
@@ -44,6 +44,8 @@ install_requires =
 [options.extras_require]
 database=
     pymongo # >= 4.2.0
+layout_validation=
+    tabulate
 csv =
     pandas # >= 1.4.3
 snt =
