--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -65,9 +65,36 @@ jobs:
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
           file: ./coverage.xml
+
       - uses: actions/cache@v3
         with:
           path: ~/.cache/pip
           key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements-dev.txt') }}
           restore-keys: |
             ${{ runner.os }}-pip-
+            
+  zenodo_cleanup:
+    runs-on: windows-latest
+    python-version: '3.8'
+
+    steps:
+
+      - name: Checkout repo
+        uses: actions/checkout@v3
+
+      - name: Cleanup Zenodo Sandbox
+        run: python tests/clean_zenodo_sandbox.py
+
+      - name: Set Up Python python38
+        uses: actions/setup-python@v3
+        with:
+          python-version: 3.8
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install setuptools
+          pip install -r requirements-dev.txt
+
+      - name: Cleanup Zenodo Sandbox
+        run: python tests/clean_zenodo_sandbox.py
