--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -74,9 +74,8 @@ jobs:
             ${{ runner.os }}-pip-
             
   zenodo_cleanup:
-    if: ${{ always() }}
     runs-on: ubuntu-latest
-    runs-on: windows-latest
+    needs: test
 
     steps:
       - name: Set up Python
