--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -13,9 +13,9 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ ubuntu-latest, macos-latest, windows-latest ]
-        python-version: [ '3.8', '3.9' , '3.10', '3.11', '3.12']
-        mongodb-version: ['5.0', '6.0']
+        os: [ ubuntu-latest, ]
+        python-version: [ '3.8', ]
+        mongodb-version: ['5.0', ]
 
     steps:
       - name: Checkout repo
@@ -76,6 +76,7 @@ jobs:
   zenodo_cleanup:
     runs-on: ubuntu-latest
     needs: test
+    uses: actions/checkout@v4
 
     steps:
       - name: Set up Python
