--- a/setup.cfg
+++ b/setup.cfg
@@ -35,7 +35,7 @@ install_requires =
     pint_xarray # >= 0.2.1
     regex # >= 2023
     packaging
-    ontolutils
+    ontolutils>=0.2.20
     python-forge # == 18.6.0
     requests
     pydantic >= 2.3.0
@@ -80,6 +80,7 @@ docs =
     simplejson
     myst-nb
     sphinxcontrib-bibtex
+    pivmetalib @ git+https://github.com/matthiasprobst/pivmetalib@main
 complete =
     %(gui)s
     %(test)s
