--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,4 @@ docs/colab/my_file.hdf
 testfile.*
 test.*
 docs/practical_examples/lib/vis-9.1.2/vis-network.min.js
+docs/practical_examples/graph.html
