remove pivmetalib dep

--- a/setup.cfg
+++ b/setup.cfg
@@ -80,7 +80,7 @@ docs =
     simplejson
     myst-nb
     sphinxcontrib-bibtex
-    pivmetalib @ git+https://github.com/matthiasprobst/pivmetalib@main
+    kglab
 complete =
     %(gui)s
     %(test)s
