update version [skip ci]

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = h5rdmtoolbox
-version = 1.3.0
+version = 1.3.0a1
 author = Matthias Probst
 author_email = matthias.probst@kit.edu
 description = Supporting a FAIR Research Data lifecycle using Python and HDF5.
