--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -4,33 +4,10 @@ build:
   os: ubuntu-22.04
   tools:
     python: "3.8"
-  apt_packages:
-    - wget
-    - gnupg
-    - curl
-  jobs:
-    pre_build:
-      # Import the MongoDB public GPG key
-      - echo "Import the MongoDB public GPG key"
-      - curl -fsSL https://www.mongodb.org/static/pgp/server-7.0.asc | gpg -o /usr/share/keyrings/mongodb-server-7.0.gpg --dearmor
-      # Create a list file for MongoDB
-      - echo "Create a list file for MongoDB"
-      - echo "deb [ arch=amd64,arm64 signed-by=/usr/share/keyrings/mongodb-server-7.0.gpg ] https://repo.mongodb.org/apt/ubuntu jammy/mongodb-org/7.0 multiverse" | tee /etc/apt/sources.list.d/mongodb-org-7.0.list
-      # Reload the local package database
-      - apt-get update
-      # Install the MongoDB packages
-      - echo "Installing mongodb"
-      - apt-get install -y mongodb-org
-      # Start the MongoDB service
-      - echo "Starting mongodb"
-      - service mongod start
-    post_build:
-      - echo "Stopping mongodb"
-      - service mongod stop
 
 python:
   install:
-    - requirements: requirements-doc.txt
+    - requirements: requirements-readthedocs.txt
 
 sphinx:
   configuration: docs/conf.py
