--- a/setup.cfg
+++ b/setup.cfg
@@ -59,6 +59,7 @@ test =
     pytest >= 7.1.2
     pytest-cov
     pylint
+    mongomock
     xmltodict
     scipy  # provides netcdf4
     %(csv)s
@@ -80,8 +81,9 @@ docs =
     simplejson
     myst-nb
     sphinxcontrib-bibtex
-    kglab
+    
 complete =
+    %(layout_validation)s
     %(gui)s
     %(test)s
     %(docs)s
